fixing images and adding titles

--- a/Portfolio/interactive/SphericalHarmonics/SH.html
+++ b/Portfolio/interactive/SphericalHarmonics/SH.html
@@ -137,7 +137,7 @@
 		</code>
 		</pre>
 			<script>
-			  document.getElementById('shaderCode').innerHTML = document.getElementById( 'vertex-shader' ).text;
+			  document.getElementById('shaderCode').innerHTML = document.getElementById( 'fragment-shader' ).text;
 			</script>
 		</div>
 	
