fixing images url

--- a/_posts/2017-02-12-SphericalHarmonics.html
+++ b/_posts/2017-02-12-SphericalHarmonics.html
@@ -50,7 +50,7 @@ The irradiance map is an image that stores the result of the integral for "every
 approximate an irradiance map with just a few coefficients in a polynomial, thus serving as a way to compress its information and even to its calculation.
 
 <center>
-        <img class="interactive"  src="images/SH/IrradianceMap.png" alt="Irradiance map" style="width:200px;height:100px;" id="sc1">
+        <img class="interactive"  src="/images/SH/IrradianceMap.png" alt="Irradiance map" style="width:200px;height:100px;" id="sc1">
 </center>
 
 </p>
@@ -66,7 +66,7 @@ surface and the direction of the ray of light that comes to that point.
 <p>
 
 <center>
-    <img class="interactive"  src="images/SH/CosineConvolution.png" alt="Cosine convolution" style="width:200px;height:200px;" id="sc1">
+    <img class="interactive"  src="/images/SH/CosineConvolution.png" alt="Cosine convolution" style="width:200px;height:200px;" id="sc1">
 </center>
 
 \begin{equation}
