--- a/_posts/2017-02-12-SphericalHarmonics.html
+++ b/_posts/2017-02-12-SphericalHarmonics.html
@@ -43,11 +43,11 @@ MathJax.Hub.Config({
 <a name="toc.1"><h1>Irradiance map and Spherical Harmonics</h1></a>
 <p>
 
-Calculation of ambient light on a surfaces requieres to calculate the integral of the incoming light with respect to the whole atmosphere for every pixel.
-Calculation of the integral on real time is just not possible, however it is possible to precalculate that integral and store it somehow to be able to use that information at runtime.
+Calculation of ambient light on a surfaces requieres to calculate the integral of the incoming light, with respect to the whole atmosphere, for each point on the surface.
+Calculation of the integral on real time is just not possible, however it is possible to precalculate that integral and store it, somehow, to be able to use that information at runtime.
 There are several ways to precalculate and store the results of the integral, among them we find irradiance maps and spherical harmonics.
 The irradiance map is an image that stores the result of the integral for "every possible" direction on the atmosphere. The Spherical Harmonics is a technique that allows to 
-approximate an irradiance map with just a few coefficients in a polynomial, thus serving as a way to compress its information and even to its calculation.
+approximate an irradiance map with just a few coefficients in a polynomial, thus serving as a way to compress its information, and even to accelerate its calculation.
 
 <center>
         <img class="interactive"  src="/images/SH/IrradianceMap.png" alt="Irradiance map" style="width:200px;height:100px;" id="sc1">
@@ -57,39 +57,46 @@ approximate an irradiance map with just a few coefficients in a polynomial, thus
 
 <a name="toc.2"><h2>Irradiance Maps</h2></a>
 
-<p>
+<h4>
 How do you normally calculate an irradiance map?
-Irradicance can be calculated by integrating throught the whole atmosphere the light that comes to a certain point (of the surface we are shading), were the light is weighted by the cosine of the angle between the normal of the
-surface and the direction of the ray of light that comes to that point.
+</h4>
+
+<p>
+Irradiance can be calculated by integrating throught the whole atmosphere the light that comes to a certain point (of the surface we are shading), weighting each ray of light by the cosine of the angle between the normal of the
+surface and the direction of that ray.
 </p>
 
 <p>
 
 <center>
-    <img class="interactive"  src="/images/SH/CosineConvolution.png" alt="Cosine convolution" style="width:200px;height:200px;" id="sc1">
+    <img class="interactive"  src="/images/SH/CosineConvolution.png" alt="Cosine convolution" style="width:200px;height:200px;" id="sc2">
 </center>
 
 \begin{equation}
 \int L_i (N \cdot L) dw
+\label{IrradianceEq}
 \end{equation}
 </p>
 <p>
-If you take a look at this equation, you can find something familiar. Yes, it looks like a convolution. A convolution of the function of the energy, coming to the point that you are shading, 
-with a kernel that represents that cosine of the angle.
+If you take a look at Equation$~\ref{IrradianceEq}$, you can find something familiar. Yes, it looks like a convolution. A convolution of the function of the energy, coming to the point that you are shading, 
+with a kernel that represents the cosine of the angle.
+</p>
+<p>
 As with any convolution, calculating it by brute-force is really expensive, but calculations in the frequency domain will accelerate it.
 </p>
 <p>
 As always, Fourier transform is the favorite option for image processing guys when working in frequencies, but we can notice that because of the nature of the phenomena we try to approximate,
 working in spherical coordinates is a better fit... 
 Aha! Spherical Harmonics to the rescue. By transforming our functions to the frequency domain and working in this domain we can achieve even
-realtime rates. Besides, the pixels in the irradiance map as I explained before, we only are interested in approximating a light that changes smoothly, therefore we can approximate our function with only a few frequencies. 
+realtime rates. 
 </p>
 <p>
-<h3>Are few frequencies enogh for a good approximation?</h3>
+<h4>Are few frequencies enogh for a good approximation?</h4>
 </p>
 <p>
-Here it is where the magic happens, the frequency representation of the cosine of the angle that multiplies the incoming energy requieres only a few frequencies to be represented, as
+Here it is where the magic happens. The frequency representation of the cosine of the angle that multiplies the incoming energy requieres only a few frequencies to be represented, as
 the higher frequencies of its representation are zero or very small numbers. You could use as few as 4 coefficients to get some nice light or 9 coefficients to make it richer in detail.
+We can see that this is the case on the pixels of the irradiance map, which change slowly it intensity and color. 
 </p>
 
 
@@ -122,18 +129,17 @@ Spherical harmonics
 Spherical Harmonics (SH) allow to transform any signal to the frequency domain in Spherical Coordinates, as Fourier does in cartesian coordiantes. 
 </p>
 <p>
-In signal processing it is well known that a convolution in the time domain is equal to a multiplication in the frequency domain (that is why convolutions become so cheap in this domain). This is always used to accelerate operations in image processing. The same property can be
-used to accelerate the calculation of the incoming light for the rendering equation.
+In signal processing it is well known that a convolution in the time domain is equal to a multiplication in the frequency domain (that is why convolutions become so cheap in this domain). This is always used to accelerate operations in image processing. 
 </p>
 <p>
 Using this property to accelerate the calculations of the rendering equation will need then the transformation of $L_i(w)$ and $\overline{(N \cdot L)}$ to the frequency domain, multiply (for spherical harmonics, we don't have a simple multiplication as we have in Fourier, but the formula is still very simple, we will see later.) the resultant coefficients and transform 
 those coefficients back to the spatial/temporal domain.
 </p>
-<p>
+<h4>
 Transforming a Signal to the Frequency domain using Spherical Harmonics.
-</p>
+</h4>
 <p>
-The transformation of a signal from the tempora/spatial domain to the SH domain is done through the Equation$\ref{transformation}$, were $f(w)$ is your original function, $Y_l^m$ is the SH basis and $F_l^m$ is the coheficient of the transformation for that SH Basis.
+The transformation of a signal from the tempora/spatial domain to the SH domain is done through the Equation$~\ref{transformation}$, were $f(w)$ is your original function, $Y_l^m$ is the SH basis and $F_l^m$ is the coeficient of the transformation for that SH Basis.
 </p>
 <p>
 \begin{equation}
@@ -156,11 +162,11 @@ Y_l^m (\theta,\phi) = K_l^m \, e^{im\phi} \, P_l^{|m|} cos(\theta)
 <p>
 
 
-with $K_l^m$ a normalization factor and $P_l^{|m|}$ the Legendre polynomials. It is important to notice that in Equation$\ref{transformation}$ $Y_l^m$ argument is w, while in Equation$\ref{SHBasisEquation}$
-I use $(\theta,\phi)$, it is because I am defining $Y_l^m$ in spherical coordinates, but the transformation  for graphics are usually done in the cartesian coordiante system, therefore $ w = (x,y,z) = (sin(\theta) * cos(\phi), sin(\theta) * sin(\phi), cos(\theta))$.
+with $K_l^m$ a normalization factor and $P_l^{|m|}$ the Legendre polynomials. It is important to notice that in Equation$~\ref{transformation}$ $Y_l^m$ argument is w, while in Equation$\ref{SHBasisEquation}$
+I use $(\theta,\phi)$. This is because I am defining $Y_l^m$ in spherical coordinates, but the transformation  for graphics are usually done in the cartesian coordiante system, therefore $ w = (x,y,z) = (sin(\theta) * cos(\phi), sin(\theta) * sin(\phi), cos(\theta))$.
 </p>
 <p>
-You can get more information in https://www.cs.dartmouth.edu/~wjarosz/publications/dissertation/appendixB.pdf.
+You can get more information in <a href="#bib.0">[0]</a>.
 </p>
 <p>
 This is the equation for the complex representation. In computer graphics we work with only the real part, and to be honest we precalculate those basis once and use them everywhere.
@@ -170,10 +176,10 @@ In the next table, I am providing the precalculated basis in spherical and in ca
 
 <table  align="center">
   <tr  class="firstLine">
-    <th>Band</th>
-    <th>Base</th> 
-    <th>Spherical</th>
-	<th>Cartesian</th>
+    <th> Band	$~$ </th>
+    <th> Base	 $~$ </th> 
+    <th> Spherical 	$~$</th>
+	<th> Cartesian 	$~$</th>
   </tr>
   <tr>
     <td>0</td>
@@ -244,7 +250,7 @@ You will notice that each Basis belongs to something called Band, and that each 
 For example, Band zero is the frequency zero $Cos (0*2*\pi*t)$, this frequency is constant and it turns out to be the average of the whole function $f(w)$ multiplied by a normalization factor that comes from the Basis.
 </p>
 <p>
-Once you calculate your coefficients $F_l^m$, you can get back to the original function by applying the inverse transformation (Equation inverse transform) which looks a lot like the original transformation.
+Once you calculate your coefficients $F_l^m$, you can get back to the original function by applying the inverse transformation (Equation$~\ref{inversetransformation}$).
 </p>
 <p>
 
@@ -262,7 +268,7 @@ we cheat all the time, so we don't use a very good approximation, we actually us
 Convolution in Frequency domain.
 </h2></a>
 <p>
-As we said previously, the convolution in frequencies is a multiplication. The equation for Spherical harmonics convolution with axial symetry is:
+As we said previously, the convolution in frequencies is a multiplication. The equation for Spherical harmonics convolution when the kernel has axial symetry is:
 </p>
 
 <p>
@@ -275,34 +281,38 @@ As we said previously, the convolution in frequencies is a multiplication. The e
 where h is the kernel, and f is the function to apply the kernel on. 
 </p>
 <p>
-You can see the derivation in the following resource: https://www.cs.jhu.edu/~misha/Spring15/17.pdf
+You can see the derivation in <a href="#bib.1">[1]</a>: 
 </p>
 <a name="toc.6"><h2>
 Putting all together
 </h2></a>
 <p>
-In short, for the convolution we see in the rendering equation can be performed in the following way:
+In short, the convolution we see in the rendering equation can be performed in the following way:
 </p>
 <p>
 <ol>
 <li> Calculate SH transformation of the light $L_i(w)$</li>
 <li> Calculate SH transformation of the clampled cosine $\overline{(N \cdot L(w))}$</li>
-<li> Perform the convolution by multiplying the coefficients</li>
+<li> Perform the convolution with Equation$~\ref{convolutionEquation}$</li>
 <li> Apply inverse transformation to the previous result</li>
 </ol>
 </p>
+
 <p>
-where the coefficients for the SH clamped cosine are:
+The coefficients for the cosine kernel never change. Therefore, we can calculate them once and use them everywhere. In the following table, I provide those coeffients which include also the multiplication by the squared root in Equation$~\ref{convolutionEquation}$; 
+this means that we just need to multiply them with the coefficients of the SH light and apply the inverse transform to get the result of the lighting equation.
 </p>
 </p>
 <p>
 <table  align="center">
-    <tr> <td> h_0 </td>  <td>$\pi$ </td> </tr>
-    <tr> <td> h_1 </td>  <td>$\frac{2\pi}{3}$ </td> </tr> 
-    <tr> <td> h_2 </td>  <td>$\frac{\pi}{4}$ </td> </tr>
-	<tr> <td> h_3 </td>  <td>$0$ </td> </tr>
+
+	<tr> <td> Band $~$</td> <td>$~$Value </td> </tr>
+    <tr> <td> h_0 </td> <td>$\pi$ </td> </tr>
+    <tr> <td> h_1 </td> <td>$\frac{2\pi}{3}$ </td> </tr> 
+    <tr> <td> h_2 </td> <td>$\frac{\pi}{4}$ </td> </tr>
+	<tr> <td> h_3 </td> <td>$0$ </td> </tr>
 </table>
-for l>0, odd bands get zero in the coefficient and even bands can be calculated with the fomula (https://cseweb.ucsd.edu/~ravir/papers/envmap/envmap.pdf)
+for l>1, odd bands get zero in the coefficient, and even bands can be calculated with the Equation$~\ref{evenElements}$ as reported by <a href="#bib.2">[2]</a>.
 </p>
 
 
@@ -515,27 +525,25 @@ Displaying an irradiance map from SH coefficients. The default values for the co
     </object>
 </div>
 
-<!--
+
 <a name="toc.7"><h1>References</h1></a>
 <ol start=0>
-	<a href="http://cs.gmu.edu/&nbsp;jmlien/teaching/cs451/uploads/Main/dual-quaternion.pdf" name="bib.0"><li value=0>  Ben Kenwright, <i>A Beginners Guide to Dual-Quaternions,</i>  2011.
-	<a href="http://www.seas.upenn.edu/&nbsp;ladislav/kavan06dual/kavan06dual.pdf" name="bib.1"><li value=1>  Ladislav Kavan, Steven Collins, et-al, <i>Dual Quaternions for Rigid Transformation Blending,</i> 2006.
-	<a href="http://www.seas.upenn.edu/&nbsp;ladislav/kavan06dual/kavan06dual.pdf" name="bib.2"><li value=2>  Ladislav Kavan, Steven Collins, et-al, <i>Dual Quaternions for Rigid Transformation Blending,</i> 2006.
-	<a href="http://www.euclideanspace.com/maths/algebra/realNormedAlgebra/other/dualQuaternion/" name="bib.3"><li value=3>  Martin John Baker, <i>Maths - Dual Quaternions,</i> 2015, [Online; accessed 8-December-2015].
-	<a href="https://en.wikipedia.org/w/index.php?title=Dual_quaternion&oldid=676267087" name="bib.4"><li value=4>  Wikipedia, <i>Dual quaternion --- Wikipedia, The Free Encyclopedia,</i> 2015, [Online; accessed 8-December-2015].  
-	<a href="http://www.xbdev.net/misc_demos/demos/dual_quaternions_beyond/paper.pdf" name="bib.5"><li value=5>  Ben Kenwright, <i>Dual-Quaternions: From Classical Mechanics to Computer Graphics and Beyond,</i> 2012.
-	<a href="http://www.euclideanspace.com/maths/algebra/realNormedAlgebra/other/dualNumbers/index.htm" name="bib.6"><li value=6>  Martin John Baker, <i>Maths - Dual Numbers,</i> 2015, [Online; accessed 8-December-2015].
-	<a href="https://en.wikipedia.org/wiki/Dual_number" name="bib.7"><li value=7>  Wikipedia, <i>Dual number --- Wikipedia, The Free Encyclopedia,</i> 2015, [Online; accessed 8-December-2015]. 
-	<a href="http://www.euclideanspace.com/maths/geometry/elements/line/plucker/index.htm" name="bib.8"><li value=8>  Martin John Baker, <i>Maths - Pl&uuml;cker Coordinates,</i> 2015, [Online; accessed 8-December-2015].
+	<a href="https://www.cs.dartmouth.edu/~wjarosz/publications/dissertation/appendixB.pdf" name="bib.0"><li value=0>  Wojciech Jarosz, <i>Efficient Monte Carlo Methods for Light Transport in Scattering Media,</i>  2008.
+	<a href="https://www.cs.jhu.edu/~misha/Spring15/17.pdf" name="bib.1"><li value=1> Kazhdan Michael, <i>FFTs in Graphics and Vision,</i> 2015.
+	<a href="https://cseweb.ucsd.edu/~ravir/papers/envmap/envmap.pdf" name="bib.2"><li value=2>  Ravi Ramamoorthi, Pat Hanrahan, <i>An Efficient Representation for Irradiance Environment Maps,</i> 2001.
 </ol>
 <hr>
--->
+
 
 
 <script src="/js/bootbox.min.js"></script>
 	
 	<script> 
-		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="media/SH/IrradianceMap.png" style="width: 100%;" class="img-rounded" >'}); });
+		 $('#sc1').click(function() { bootbox.alert( {size: 'large', message:'<img src="/images/SH/IrradianceMap.png" style="width: 100%;" class="img-rounded" >'}); });
+
+	</script>
+	<script> 
+		 $('#sc2').click(function() { bootbox.alert( {size: 'large', message:'<img src="/images/SH/CosineConvolution.png" style="width: 100%;" class="img-rounded" >'}); });
 
 	</script>
 	
