--- a/Portfolio/interactive/SphericalHarmonics/SHModel.html
+++ b/Portfolio/interactive/SphericalHarmonics/SHModel.html
@@ -75,7 +75,7 @@
         {
 			vec3 color = vec3(0.0);
 			
-			vec3 N = normal.xzy; //different arrangement
+			vec3 N = normal.xyz; //different arrangement
 			
 			vec3 base0 = getBase(N, 0);
 			vec3 base1 = getBase(N, 1);
